Fix Wrapper-Width on Tablet-up
SRFCMSAL-2501

--- a/source/_patterns/30-organisms/modal/modal.scss
+++ b/source/_patterns/30-organisms/modal/modal.scss
@@ -85,6 +85,11 @@ $modal-z-index: 100;
     max-width: $content-width;
     padding: 0;
   }
+
+  @include tablet-up {
+    max-width: 100%;
+    padding: 0;
+  }
 }
 
 .modal__head {
